--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "queue": "cpp",
         "complex": "cpp",
         "vector": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "__tree": "cpp",
+        "bitset": "cpp"
     }
 }
